# 4dof_robot_arm_control_with_vision

./: README.md
install/: local_setup.sh  setup.sh
install/conveyor_belt/lib/conveyor_belt/: command_pub  conveyor_gui  publish_to_arduino
install/conveyor_belt/share/conveyor_belt/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
runs/detect/train/: args.yaml  events.out.tfevents.1734780245.g1.31667.0  results.csv
src/conveyor_belt/: package.xml  setup.cfg  setup.py
src/conveyor_belt/conveyor_belt/: ArUco_pose_estimation.ipynb  Aruco.py  aruco_mark_detection.py  camera_calibration.py  camera_calibration_ver2.py  camera_capture.py  command_pub.py  conveyor_gui.py  publish_to_arduino.py  test.py  text_input.ui
src/get_img/: package.xml  setup.cfg  setup.py
src/get_img/get_img/: pub_img.py  sub_img.py
src/gui/: package.xml  setup.py
src/gui/fullfilment/: package.xml  setup.cfg  setup.py
src/gui/fullfilment/best/: data.pkl
src/gui/fullfilment/best/.data/: serialization_id
src/gui/fullfilment/best/data/: 0  1  10  100  102  103  104  105  106  108  109  110  111  112  114  115  116  117  118  12  120  121  122  123  124  126  127  128  129  13  130  132  133  134  135  136  138  139  14  140  (+257 more)
src/gui/fullfilment/fullfilment/: aruco_marker.py  box_gripper.py  image_pub.py  joint_con.py  login.py  main.py  manual_mode.py
src/gui/fullfilment/fullfilment/ui/: login.ui  main.ui  manual_mode.ui
src/gui/fullfilment/launch/: fullfilment_launch.py
src/gui/gui/: box_send_goal.py  gui.py  jobactionservertest.py  sub_compress_image.py  subodme.py
src/interfaces/: CMakeLists.txt
src/moveit/: package.xml  setup.cfg  setup.py
src/moveit/moveit/: box_draw.py  box_send_goal.py  check_box_color.py  check_box_service.py  check_box_service_beta.py  ikpy_openmanipulator_test.ipynb  move_arm_client.py  move_arm_service.py  pub_compress_image.py  pub_img.py  send_box_position.py  sub_img.py  turtlebot3_box_pick_and_place.py  turtlebot3_box_pick_and_place_beta.py  turtlebot3_manipulation_xyz_test.py  yolo_imshow_test.py  yolo_test.py
src/moveit_interfaces/: CMakeLists.txt
src/moveit_interfaces/action/: Conveyor.action
src/moveit_interfaces/msg/: ColorPosition.msg  MultiBoxPosition.msg
(+363 files in other folders)
