<?xml version="1.0"?>
<package format="3">
  <name>fullfilment</name>
  <version>0.0.1</version>
  <description>Fullfilment package with GUI nodes</description>
  <maintainer email="seongho@example.com">Seongho</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>PyQt5</depend>
  <depend>ament_index_python</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>python3-pyqt5</exec_depend>
  <depend>interfaces</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
